<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AggiungiProdActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/item_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="returnReply"
        android:text="@string/item_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/item_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="returnReply"
        android:text="@string/item_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/item_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="returnReply"
        android:text="@string/item_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/item_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="returnReply"
        android:text="@string/item_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385" />

</androidx.constraintlayout.widget.ConstraintLayout>